--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "bootstrap": "^4.6.0",
     "firebase": "^8.3.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
